--- a/css/quizstyle.css
+++ b/css/quizstyle.css
@@ -1,7 +1,7 @@
 *, *::after, *::before {
   box-sizing: border-box;
   font-family: "Bookman Old Style", "Book Antiqua", serif;
-  font-size: 102%;
+  font-size: 108%;
 }
 
 :root {
@@ -12,14 +12,15 @@
 
 body {
   --hue: var(--hue-neutral);
-  padding: 0;
-  margin: 0;
+  padding: 10;
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
+  width: 110vw;
   height: 100vh;
+  margin-top: 100px;
   background-color: hsl(var(--hue), 100%, 25%);
 }
 
@@ -83,8 +84,8 @@ body.wrong {
 }
 
 #correctSign, #wrongSign {
-  width: 7%;
-  height: 16%;
+  width: 12%;
+  height: 20%;
   margin: 0%;
   position: absolute;
   bottom: 1%;
@@ -110,23 +111,14 @@ img {
 
 #marks {
 
-  right: 10%;
-  top: 1%;
-  text-align: center;
-  font-weight: bolder;
-  font-size: 100%;
+ 
 }
 
 
 @media (min-width: 768px) {
 
   #marks {
-    width: 20%;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 0 15px 2px;
-    position: absolute;
-    right: 10%;
+    right: 19%;
     top: 1%;
     text-align: center;
     font-weight: bolder;
@@ -138,7 +130,12 @@ img {
 
 @media (max-width: 767px) {
 
- 
+  *, *::after, *::before {
+    box-sizing: border-box;
+    font-family: "Bookman Old Style", "Book Antiqua", serif;
+    font-size: 103%;
+  }
+  
   body {
     --hue: var(--hue-neutral);
     padding: 0;
@@ -162,7 +159,7 @@ img {
     max-width: 40px; /* Set a maximum width for the container */
   }
   #correctSign, #wrongSign {
-    width: 20%;
+    width: 23%;
     height: 12%;
     margin: 0%;
     position: absolute;
